--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -740,3 +740,21 @@ footer {
   height: 150px;
 }
 
+.form button {
+  border: none;
+  border-radius: 40px;
+  background-color: white;
+  color: black;
+  padding: 12px 40px;
+  align-self: center;
+  transition: all 0.3s ease;
+  font-size: 16px;
+  font-weight: 500;
+  font-family: Poppins, sans-serif;
+  cursor: pointer;
+}
+
+.form button:hover {
+  box-shadow: 0 5px 15px rgba(236, 229, 225, 0.3);
+  transform: translateY(-2px);
+}
