--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -719,6 +719,7 @@ footer {
   font-family: Poppins, sans-serif;
   font-size: 16px;
   transition: border-color 0.3s ease;
+  border-radius: 10px;
 }
 
 .form textarea {
@@ -732,6 +733,7 @@ footer {
   transition: border-color 0.3s ease;
   height: 150px;
   resize: none;
+  border-radius: 10px;
 }
 
 
