--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -779,21 +779,28 @@ form input:focus {
   }
 }
 
-h1 {
-  /* display: inline; */
-  transition: color 0.3s ease, text-shadow 0.3s ease;
-}
-
-h1:hover {
-  text-shadow: 0 0 10px rgba(255, 255, 255, 0.8),
-    0 0 20px rgba(255, 255, 255, 0.6);
-}
-
-.skills-heading h1 {
+.skills-heading h1{
   transition: color 0.3s ease, text-shadow 0.3s ease;
 }
 
 .skills-heading h1:hover {
-  text-shadow: 0 0 10px rgba(255, 215, 0, 0.8),
+  text-shadow: 0 0 25px rgba(255, 215, 0, 0.8),
   0 0 20px rgba(255, 215, 0, 0.6);
+}
+
+h1,
+.Logo-text,
+.ParaThree  {
+  /* display: inline; */
+  transition: color 0.3s ease, text-shadow 0.3s ease;
+}
+
+h1:hover, .ParaThree:hover {
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 255, 255, 0.6);
+}
+ 
+.Logo-text {
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.8),
+    0 0 20px rgba(255, 255, 255, 0.6);
 }
